fixed z-index on main img

--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ a {
   z-index: 10;
 }
 
+img {
+  z-index: 100;
+  position: relative;
+}
+
 .wrapper {
   display: flex;
   width: 1200px;
